# FACEL_SOPORTE_IA

./: README.md  agenframework-http-remote.py  cargarDatos.py  get_token.py  inicializarServico.py  main.py  pyproject.toml
interface/: index.html  script.js  styles.css
src/: Proceso de llamado de Jobs BICC desde Oracle APEX.docx
