[project]
name = "facel-chatbot-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "fastmcp>=2.14.1",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-text-splitters>=1.1.0",
]
